--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="http://okthess.gr/dev/style/main.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
     <script>
     (function(i, s, o, g, r, a, m) {
@@ -161,7 +162,11 @@
         </div>
         <div class="container">
             <div class="slice" id="3">
-                <div class="row"></div>
+                <div class="row events text-center"></div>
+                <div class="row no-events text-center" style="display: none">No events currently</div>
+                <div class="row text-center">
+                    <p><a class="btn btn-secondary" href="http://okthess.gr/dev/events.html" role="button">See all events &raquo;</a></p>
+                </div>
             </div>
         </div>
         </div>
